--- a/spring-cloud-consumer/src/main/resources/application.properties
+++ b/spring-cloud-consumer/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=spring-cloud-consumer
 
 # server 
 server.port=8090
+server.context-path=/feign
 
 # eureka 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
