--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -7,14 +7,29 @@ server.port=8888
 # eureka 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+#zuul
+zuul.ignored-services: '*'
+
+zuul.routes.provider.path=/api/**
+zuul.routes.provider.service-id=spring-cloud-provider
+zuul.routes.provider.strip-prefix=false
+
+zuul.routes.consumer.path=/feign/**
+zuul.routes.consumer.service-id=spring-cloud-consumer
+zuul.routes.consumer.strip-prefix=false
+
+zuul.routes.auth.path=/auth/**
+zuul.routes.auth.service-id=spring-cloud-auth
+zuul.routes.auth.strip-prefix=false
+
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
 eureka.instance.prefer-ip-address=true 
 
 #设置拉取服务注册信息时间，默认 60s 
-eureka.client.registry-fetch-interval-seconds=30 
+eureka.client.registry-fetch-interval-seconds=30
 
 #指定续约更新频率，默认是 30s 
-eureka.instance.lease-renewal-interval-in-seconds=15 
+eureka.instance.lease-renewal-interval-in-seconds=15
 
 #设置过期剔除时间，默认 90s 
 eureka.instance.lease-expiration-duration-in-seconds=45
