--- a/spring-cloud-provider/src/main/resources/application.properties
+++ b/spring-cloud-provider/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=spring-cloud-provider
 
 # server 
 server.port=8080
+server.context-path=/api
 
 # eureka 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
