--- a/spring-cloud-provider/src/main/resources/application.properties
+++ b/spring-cloud-provider/src/main/resources/application.properties
@@ -9,7 +9,12 @@ server.context-path=/api
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
-eureka.instance.prefer-ip-address=true 
+eureka.instance.prefer-ip-address=true
+
+security.sessions=stateless
+security.oauth2.resource.user-info-uri=http://localhost:8888/auth/user
+security.oauth2.resource.prefer-token-info=false
+security.oauth2.resource.service-id=resource-server
 
 #设置拉取服务注册信息时间，默认 60s 
 eureka.client.registry-fetch-interval-seconds=30 
