--- a/spring-cloud-auth/src/main/resources/application.properties
+++ b/spring-cloud-auth/src/main/resources/application.properties
@@ -9,7 +9,9 @@ server.context-path=/auth
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
-eureka.instance.prefer-ip-address=true 
+eureka.instance.prefer-ip-address=true
+
+security.sessions=stateless
 
 #设置拉取服务注册信息时间，默认 60s 
 eureka.client.registry-fetch-interval-seconds=30 
