--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -13,14 +13,17 @@ zuul.ignored-services: '*'
 zuul.routes.provider.path=/api/**
 zuul.routes.provider.service-id=spring-cloud-provider
 zuul.routes.provider.strip-prefix=false
+zuul.routes.provider.sensitive-headers=
 
 zuul.routes.consumer.path=/feign/**
 zuul.routes.consumer.service-id=spring-cloud-consumer
 zuul.routes.consumer.strip-prefix=false
+zuul.routes.consumer.sensitive-headers=
 
 zuul.routes.auth.path=/auth/**
 zuul.routes.auth.service-id=spring-cloud-auth
 zuul.routes.auth.strip-prefix=false
+zuul.routes.auth.sensitive-headers=
 
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
 eureka.instance.prefer-ip-address=true 
