--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -28,17 +28,10 @@ eureka.instance.prefer-ip-address=true
 
 security.sessions=stateless
 
-#security.oauth2.client.client-id=android
-#security.oauth2.client.client-secret=android
-#security.oauth2.resource.user-info-uri=http://localhost:9999/auth/user
-#security.oauth2.resource.prefer-token-info=true
-
-security.oauth2.client.client-id=webapp
-security.oauth2.client.access-token-uri=http://localhost:9999/auth/oauth/token
-security.oauth2.client.user-authorization-uri=http://localhost:9999/auth/oauth/authorize
+security.oauth2.client.client-id=android
+security.oauth2.client.client-secret=android
 security.oauth2.resource.user-info-uri=http://localhost:9999/auth/user
-security.oauth2.resource.prefer-token-info=false
-
+security.oauth2.resource.prefer-token-info=true
 
 #设置拉取服务注册信息时间，默认 60s 
 eureka.client.registry-fetch-interval-seconds=30
