--- a/spring-cloud-consumer/src/main/resources/application.properties
+++ b/spring-cloud-consumer/src/main/resources/application.properties
@@ -19,3 +19,7 @@ eureka.instance.lease-renewal-interval-in-seconds=15
 
 #\u8BBE\u7F6E\u8FC7\u671F\u5254\u9664\u65F6\u95F4\uFF0C\u9ED8\u8BA4 90s 
 eureka.instance.lease-expiration-duration-in-seconds=45
+
+#sleuth
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.percentage=1.0
