--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -33,3 +33,7 @@ eureka.instance.lease-renewal-interval-in-seconds=15
 
 #设置过期剔除时间，默认 90s 
 eureka.instance.lease-expiration-duration-in-seconds=45
+
+#sleuth
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.percentage=1.0
