--- a/spring-cloud-consumer/src/main/resources/application.properties
+++ b/spring-cloud-consumer/src/main/resources/application.properties
@@ -23,3 +23,10 @@ eureka.instance.lease-expiration-duration-in-seconds=45
 #sleuth
 spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.percentage=1.0
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=lamic
+spring.rabbitmq.password=lamic
+spring.rabbitmq.virtual-host=lamic_hosts
+spring.zipkin.rabbitmq.queue=zipkin
