--- a/spring-cloud-zipkin/pom.xml
+++ b/spring-cloud-zipkin/pom.xml
@@ -51,7 +51,21 @@
 			<groupId>io.zipkin.java</groupId>
 			<artifactId>zipkin-autoconfigure-collector-rabbitmq</artifactId>
 			<version>2.3.1</version>
-		</dependency>
+		</dependency><dependency>
+            <groupId>io.zipkin.java</groupId>
+            <artifactId>zipkin-storage-mysql</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+		
+		
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
