--- a/spring-cloud-zipkin/src/main/resources/application.yml
+++ b/spring-cloud-zipkin/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: spring-cloud-zipkin
+  datasource: 
+    url: jdbc:mysql://localhost:3306/spring-cloud-zipkin?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: root
+    password: 1987116m
+    driver-class-name: com.mysql.jdbc.Driver
 #  rabbitmq: 
 #    host: localhost
 #    port: 5672
@@ -11,6 +16,8 @@ spring:
 #    password: lamic
 #    virtual-host: lamic_hosts
 zipkin: 
+  storage: 
+    type: mysql
   collector: 
     rabbitmq: 
       addresses: localhost:5672
