--- a/spring-cloud-consumer/src/main/resources/application.properties
+++ b/spring-cloud-consumer/src/main/resources/application.properties
@@ -9,7 +9,12 @@ server.context-path=/feign
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
-eureka.instance.prefer-ip-address=true 
+eureka.instance.prefer-ip-address=true
+
+security.sessions=stateless
+security.oauth2.resource.user-info-uri=http://localhost:8888/auth/user
+security.oauth2.resource.prefer-token-info=false
+security.oauth2.resource.service-id=spring-cloud-consumer
 
 #\u8BBE\u7F6E\u62C9\u53D6\u670D\u52A1\u6CE8\u518C\u4FE1\u606F\u65F6\u95F4\uFF0C\u9ED8\u8BA4 60s 
 eureka.client.registry-fetch-interval-seconds=30 
