--- a/spring-cloud-auth/src/main/resources/application.properties
+++ b/spring-cloud-auth/src/main/resources/application.properties
@@ -5,6 +5,17 @@ spring.application.name=spring-cloud-auth
 server.port=9999
 server.context-path=/auth
 
+# mysql
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=1987116m
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dbcp2.max-idle=5
+spring.datasource.dbcp2.max-wait-millis=10000
+spring.datasource.dbcp2.min-idle=2
+spring.datasource.dbcp2.initial-size=3
+spring.datasource.dbcp2.validation-query=SELECT 1
+
 # eureka 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
