--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -13,17 +13,29 @@ zuul.ignored-services: '*'
 zuul.routes.provider.path=/api/**
 zuul.routes.provider.service-id=spring-cloud-provider
 zuul.routes.provider.strip-prefix=false
+zuul.routes.provider.sensitive-headers=
 
 zuul.routes.consumer.path=/feign/**
 zuul.routes.consumer.service-id=spring-cloud-consumer
 zuul.routes.consumer.strip-prefix=false
+zuul.routes.consumer.sensitive-headers=
 
 zuul.routes.auth.path=/auth/**
 zuul.routes.auth.service-id=spring-cloud-auth
 zuul.routes.auth.strip-prefix=false
+zuul.routes.auth.sensitive-headers=
 
 eureka.instance.instanceId=${spring.application.name}:${random.value} 
 eureka.instance.prefer-ip-address=true 
+
+security.sessions=stateless
+
+security.oauth2.client.client-id=android
+security.oauth2.client.client-secret=android
+security.oauth2.client.access-token-uri=http://localhost:9999/auth/oauth/token
+security.oauth2.resource.token-info-uri=http://localhost:9999/auth/oauth/check_token
+security.oauth2.resource.user-info-uri=http://localhost:9999/auth/user
+security.oauth2.resource.prefer-token-info=true
 
 #设置拉取服务注册信息时间，默认 60s 
 eureka.client.registry-fetch-interval-seconds=30
