--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -25,10 +25,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Edgware.SR3</spring-cloud.version>
+		<jwt.version>2.2.0</jwt.version>
+		<jjwt.version>0.6.0</jjwt.version>
 	</properties>
-
-	<dependencies>
-	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
@@ -39,6 +38,16 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+	            <groupId>com.auth0</groupId>
+	            <artifactId>java-jwt</artifactId>
+	            <version>${jwt.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>io.jsonwebtoken</groupId>
+	            <artifactId>jjwt</artifactId>
+	            <version>${jjwt.version}</version>
+        	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
